[package]
name = "cyber_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"] # <--- Important: Makes a .a file for C++

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2" # Helpers for C-types (char*, size_t)
